--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -147,30 +147,35 @@ a.fa.fa-facebook.facebook:hover, a.fa.fa-envelope.email:hover, a.fa.fa-whatsapp.
 @media only screen and (max-width: 768px) {
 
 
-  .social-icons{
-  position:absolute;
-  top:0;
+  position: absolute;
+    top: 97%;
+    /* left: 20%; */
+    right: 19%;
+    display: flex;
+    margin: auto;
+    justify-content: center;
+}
 }
 @media only screen and (max-width: 480px) {
 
 
   .social-icons{
   position:absolute;
-  top:0;
+  top:5%;
 }
-@media only screen and (min-width:375px ) {
+@media only screen and (max-width:375px ) {
 
 
   .social-icons{
   position:absolute;
-  top:0;
+  top:5%;
 }
 @media only screen and (max-width: 1024px) {
 
 
   .social-icons{
   position:absolute;
-  top:0;
+  top:5%;
 }
 
 .social-icons > a:hover{
