--- a/templates/basic.html
+++ b/templates/basic.html
@@ -119,7 +119,7 @@
 <ul class="navbar-nav mb-2 mx-3 mb-lg-0">
    <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Welcome {{request.user}}
+            Welcome {{request.user}}{{request.user.profile.pic.url}}
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="/profile">manage your profile</a></li>
