--- a/templates/basic.html
+++ b/templates/basic.html
@@ -119,7 +119,8 @@
 <ul class="navbar-nav mb-2 mx-3 mb-lg-0">
    <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Welcome {{request.user}}{{request.user.profile.pic.url}}
+            Welcome {{request.user}}
+
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="/profile">manage your profile</a></li>
@@ -146,6 +147,7 @@
 
 {%endif %}
  <!-- login Modal -->
+ 
 <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -289,7 +291,10 @@
   {% block body %}
   {% endblock  %}
   </body>
-  {% block js %}
+  {% block js %}(
+  <script>
+console.log({{request.user.profile.pic.url}})
+  </script>
   {%endblock%}
 
   <!-- Optional JavaScript; choose one of the two! -->
