--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -275,13 +275,14 @@ a{
               {{i.user.get_short_name|slice:":1"}}</span></div>
               
             </div>
-              <div class="media-body u-shadow-v18 g-bg-secondary g-pa-30">
+              <div class="media-body u-shadow-v18 g-bg-secondary g-pa-30 py-2">
                 <div class="g-mb-15">
                   <h5 class="h5 g-color-gray-dark-v1 mb-0">{{i.user}}</h5>
                   <span class="g-color-gray-dark-v4 g-font-size-12">{{i.timestamp|naturaltime}}</span>
                 </div>
-          </div>
+          
                 <p> {{i.comment|truncatechars:300}}</p>
+              </div>
                 {% endfor %}
               </div>
             
