--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -218,7 +218,7 @@ a{
 {% send_email object.title "New post: {{object.title}}. Check it out!" object_or_url " " "fa fa-envelope email" %}
 
 
-{% post_to_whatsapp object_or_url " " "fa fa-whatsapp-square whatsapp" %}
+{% post_to_whatsapp object_or_url " " "fa fa-whatsapp whatsapp" %}
 {% post_to_telegram "{{object.title}}" object_or_url " " "fa fa-telegram telegram"%}
 
 </div>
