--- a/templates/basic.html
+++ b/templates/basic.html
@@ -122,6 +122,7 @@
             Welcome {{request.user}}
 
           </a>
+          {% url 'password_reset' %}. 
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="/profile">manage your profile</a></li>
             
