--- a/templates/basic.html
+++ b/templates/basic.html
@@ -122,7 +122,8 @@
             Welcome {{request.user}}
 
           </a>
-          {% url 'password_reset' %}. 
+          <a href="{% url 'password_reset' %}">Forgot password</a>
+          
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="/profile">manage your profile</a></li>
             
