--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,6 +1,6 @@
-{% extends 'basic.html' %}
+{% extends 'base.html' %}
 
-{% block body %}
+{% block content %}
   <h3>Forgot password</h3>
   <form method="post">
     {% csrf_token %}
