--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,6 +1,6 @@
-{% extends 'basic.html' %}
+{% extends 'base.html' %}
 
-{% block body %}
+{% block content %}
   {% if validlink %}
     <h3>Change password</h3>
     <form method="post">
