--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,6 +1,6 @@
-{% extends 'basic.html' %}
+{% extends 'base.html' %}
 
-{% block body %}
+{% block content %}
   <p>
     We've emailed you instructions for setting your password, if an account exists with the email you entered.
     You should receive them shortly.
