--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'basic.html' %}
 
-{% block content %}
+{% block body %}
   <p>
     Your password has been set. You may go ahead and <a href="{% url 'signin' %}">sign in</a> now.
   </p>
