--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,6 +1,6 @@
 {% extends 'basic.html' %}
 
-{% block content %}
+{% block body %}
   <h3>Forgot password</h3>
   <form method="post">
     {% csrf_token %}
