--- a/templates/basic.html
+++ b/templates/basic.html
@@ -188,7 +188,7 @@
                 <input type="password" class="form-control" name="loginpass" placeholder="Enter your password" id="loginpass">
   
             </div>
-  
+            <a href="{% url 'password_reset' %}" class="mt-2 text-muted">Forgot password</a>
               <div class="form-check">
               
                    
@@ -200,7 +200,7 @@
               
            
               </form> 
-              <a href="{% url 'password_reset' %}">Forgot password</a>
+             
 
         </div>
     
