--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,4 +1,10 @@
 {% extends 'basic.html' %}
 {% block body %}
-<a href="/login/">login</a>
+<a href="/blog/">login</a>
 {% endblock body %}
+{% block js %}
+  <script>
+      button=document.getElementById('loginbtn')
+      button.click()
+  </script>
+{% endblock js %}
