--- a/templates/basic.html
+++ b/templates/basic.html
@@ -192,7 +192,7 @@
               <div class="form-check">
               
                    
-               <button type="submit" href="#" class="btn btn-primary active  " aria-current="page" id="loginbtn">Submit</button>
+               <button type="button" href="#" class="btn btn-primary active  " aria-current="page" id="loginbtn">Submit</button>
               </div>
               
           
