--- a/templates/basic.html
+++ b/templates/basic.html
@@ -155,7 +155,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="loginModalLabel">Login here</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="loginbtn"></button>
         </div>
         <div class="modal-body">
           
@@ -192,7 +192,7 @@
               <div class="form-check">
               
                    
-               <button type="button" href="#" class="btn btn-primary active  " aria-current="page" id="loginbtn">Submit</button>
+               <button type="submit" href="#" class="btn btn-primary active  " aria-current="page" id="">Submit</button>
               </div>
               
           
