--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,10 +1,5 @@
 {% extends 'basic.html' %}
 {% block body %}
-<a href="/blog/">login</a>
+<a href="/login/">login</a>
 {% endblock body %}
-{% block js %}
-  <script>
-      button=document.getElementById('loginbtn')
-      button.click()
-  </script>
-{% endblock js %}
+
