--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,10 +1,14 @@
 {% extends 'basic.html' %}
-
+{% block css %}
+  
+{% endblock css %}
 {% block body %}
+<div class="box">
   <h3>Forgot password</h3>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Submit</button>
   </form>
+</div>
 {% endblock %}
