--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -7,7 +7,8 @@
   <h3>Forgot password</h3>
   <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+
+    <div class="form-control">{{ form.as_p }}</div>
     <button type="submit">Submit</button>
   </form>
 </div>
