--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -5,11 +5,15 @@
 {% block body %}
 <div class="box">
   <h3>Forgot password</h3>
+  </div>
+
   <form method="post">
     {% csrf_token %}
 
-    <div class="form-control">{{ form.as_p }}</div>
-    <button type="submit">Submit</button>
+<div class="mb-3">
+    {{ form.as_p }}
+    </div>
+    <button type="submit" class="btn btn-primary active">Submit</button>
   </form>
-</div>
+
 {% endblock %}
