--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -3,9 +3,9 @@
   
 {% endblock css %}
 {% block body %}
-<div class="box">
+<div class="container">
   <h3>Forgot password</h3>
-  </div>
+ 
 
   <form method="post">
     {% csrf_token %}
@@ -15,5 +15,5 @@
     </div>
     <button type="submit" class="btn btn-primary active">Submit</button>
   </form>
-
+</div>
 {% endblock %}
