--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,6 +1,10 @@
 {% extends 'basic.html' %}
 {% block css %}
-  
+  h3{
+    display: block;
+    text-align: center;
+    margin-bottom: 2rem;
+  }
 {% endblock css %}
 {% block body %}
 <div class="container">
