--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,5 +1,13 @@
 {% extends 'basic.html' %}
 
+{% block css %}
+  
+p{
+  font-size:1.2rem;
+  font-weight:300;
+  letter-spacing:0.4rem;
+}
+{% endblock css %}
 {% block body %}
 <div class="container py-2 mx-2">
   <p>
