--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -2,17 +2,18 @@
 
 {% block body %}
   {% if validlink %}
-  
+  <div class="container py-3 mx-3">
     <h3>Change password</h3>
     <form method="post">
       {% csrf_token %}
       {{ form.as_p }}
-      <button type="submit">Change password</button>
+      <button type="submit" class="btn btn-primary mt-2">Change password</button>
     </form>
   {% else %}
-    <p>
+    <p class="text-muted">
       The password reset link was invalid, possibly because it has already been used.
       Please request a new password reset.
     </p>
+  </div>
   {% endif %}
 {% endblock %}
