--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1,1 +1,59 @@
 {% extends 'basic.html' %}
+{% block css %}
+  *{
+      margin:0;
+      padding:0;
+      height:1000px;
+  }
+  .banner{
+      width:100%;
+      height:100vh;
+      overflow:hiden;
+      display:flex;
+      justify-content:center;
+      align-items:center;
+  }
+  .baneer video{
+      position:absolute;
+      top:0;
+      left:0;
+      object-fit:cover;
+      width:100%;
+      height:100%;
+      pointer-event:none;
+  }
+  .banner .content{
+      position:relative;
+      z-index:1;
+      max-width:1000px;
+      margin:0 auto;
+      text-align:center;
+  }
+  .banner .content h1{
+      margin:0;
+      padding:0;
+      font-size:4.5rem;
+      text-transform:uppercase;
+      color:#fff;
+  }
+  .banner .content p{
+   
+    font-size:1.5rem;
+  
+    color:#fff;
+}
+
+{% endblock css %}
+{% block body %}
+{% load static %}
+  <div class="banner">
+      <video autoplay muted loop >
+<source src="{% static 'background.mp4' %}" type="video/mp4"> 
+      </video> 
+      <div class="content">
+          <h1>Lorem ipsum dolor sit amet.</h1>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo quibusdam iusto officia repellat tenetur nisi similique, dignissimos, maiores corporis minus eveniet ipsa odio qui placeat in natus modi commodi facere!</p>
+        </div>
+  </div>
+
+{% endblock body %}
