--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -3,12 +3,12 @@
   *{
       margin:0;
       padding:0;
-      height:1000px;
+     
   }
   .banner{
       width:100%;
       height:100vh;
-      overflow:hiden;
+      overflow:hidden;
       display:flex;
       justify-content:center;
       align-items:center;
