--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -23,7 +23,7 @@
       pointer-event:none;
   }
   .banner .content{
-      position:relative;
+      position:absolute;
       z-index:1;
       max-width:1000px;
       margin:0 auto;
