--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -13,7 +13,7 @@
       justify-content:center;
       align-items:center;
   }
-  .baneer video{
+  .banner video{
       position:absolute;
       top:0;
       left:0;
