--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -7,7 +7,7 @@
   }
   .banner{
       width:100%;
-      height:100vh;
+      height:95vh;
       overflow:hidden;
       display:flex;
       justify-content:center;
@@ -23,7 +23,7 @@
       pointer-event:none;
   }
   .banner .content{
-      position:absolute;
+      position:relative;
       z-index:1;
       max-width:1000px;
       margin:0 auto;
