--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -51,7 +51,7 @@
 <source src="{% static 'background.mp4' %}" type="video/mp4"> 
       </video> 
       <div class="content">
-          <h1>Lorem ipsum dolor sit amet.</h1>
+          <h1>Welcome to Writer hub</h1>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo quibusdam iusto officia repellat tenetur nisi similique, dignissimos, maiores corporis minus eveniet ipsa odio qui placeat in natus modi commodi facere!</p>
         </div>
   </div>
