--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -52,7 +52,7 @@
       </video> 
       <div class="content">
           <h1>Welcome to Writer hub</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo quibusdam iusto officia repellat tenetur nisi similique, dignissimos, maiores corporis minus eveniet ipsa odio qui placeat in natus modi commodi facere!</p>
+<p>A platform for learning  basics and cpmplex coding techniques</p>
         </div>
   </div>
 
