--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -52,7 +52,7 @@
       </video> 
       <div class="content">
           <h1>Welcome to Writer hub</h1>
-<p>A platform for learning  basics and cpmplex coding techniques</p>
+<p>A  complete platform for learning  basics and complex coding techniques</p>
         </div>
   </div>
 
