--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -5,6 +5,17 @@
       padding:0;
      
   }
+  
+      .banner::after{
+          position:absolute;
+          top:0;
+          left:0;
+          background-color:red;
+          width:100px;
+          height:100px;
+          border:2px solid red;
+      }
+  
   .banner{
       width:100%;
       height:100vh;
