--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -6,15 +6,7 @@
      
   }
   
-      .banner::after{
-          position:absolute;
-          top:0;
-          left:0;
-          background-color:red;
-          width:100px;
-          height:100px;
-          border:2px solid red;
-      }
+      
   
   .banner{
       width:100%;
@@ -57,6 +49,7 @@
 {% endblock css %}
 {% block body %}
 {% load static %}
+<div class="overflow">
   <div class="banner">
       <video autoplay muted loop >
 <source src="{% static 'background.mp4' %}" type="video/mp4"> 
@@ -66,5 +59,5 @@
 <p>A  complete platform for learning  basics and complex coding techniques</p>
         </div>
   </div>
-
+</div>
 {% endblock body %}
