--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -18,7 +18,7 @@
   }
   .banner video{
       position:absolute;
-    
+      top: 57px;
       left:0;
       object-fit:cover;
       width:100%;
