--- a/templates/basic.html
+++ b/templates/basic.html
@@ -66,8 +66,10 @@ body {
 }
 
 .wrap {
-  background-color: black;
+  
   position: absolute;
+  width: 100vw;
+  height: 100vh;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -76,6 +78,7 @@ body {
 .text{
   font-size: 3.1rem;
   font-weight:bolder ;
+  color: #fff;
 }
        {% block css %} 
   
