--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -9,6 +9,8 @@
       
   
   .banner{
+      position:relative;
+      top:0;
       width:100%;
       height:100vh;
       overflow:hidden;
@@ -18,7 +20,7 @@
   }
   .banner video{
       position:absolute;
-      top: 57px;
+     
       left:0;
       object-fit:cover;
       width:100%;
