--- a/templates/basic.html
+++ b/templates/basic.html
@@ -329,6 +329,7 @@ body {
   window.onload = function(){
     //hide the preloader
     document.querySelector(".wrap").style.display = "none";
+    document.querySelector(".banner").style.display='flex';
 
 }</script>
   {% block js %}
