--- a/templates/basic.html
+++ b/templates/basic.html
@@ -62,7 +62,7 @@ body {
   position: relative; 
   width: 100%;
   height: 100vh;
-  font-family: Montserrat;
+
 }
 
 .wrap {
@@ -305,7 +305,7 @@ body {
     </div>
 </div>
 
-  <!-- signup modal ends -->
+  <!-- ! signup modal ends -->
 
 
     </div>
@@ -325,7 +325,9 @@ body {
 
   {% block body %}
   {% endblock  %}
-
+<footer>
+  <div class="footer"></div>
+</footer>
 </body>
 <script> 
  
