--- a/templates/basic.html
+++ b/templates/basic.html
@@ -84,6 +84,16 @@ body {
   font-weight:bolder ;
   color: #fff;
 }
+.footer{
+  position: relative;
+    bottom: 0;
+    left: 0;
+    width: fit-content;
+    width: 100vw;
+    width: 100%;
+    height: 20vh;
+    background: #942b2b;
+}
        {% block css %} 
   
        {% endblock %}
@@ -325,8 +335,8 @@ body {
 
   {% block body %}
   {% endblock  %}
-<footer>
-  <div class="footer"></div>
+<footer class="footer">
+  
 </footer>
 </body>
 <script> 
