--- a/templates/basic.html
+++ b/templates/basic.html
@@ -88,7 +88,7 @@ body {
   position: relative;
     bottom: 0;
     left: 0;
-    width: fit-content;
+    width:100%;
     width: 100vw;
     width: 100%;
     height: 20vh;
@@ -335,7 +335,7 @@ body {
 
   {% block body %}
   {% endblock  %}
-<footer class="footer">
+<footer class="footer container">
   
 </footer>
 </body>
