--- a/templates/basic.html
+++ b/templates/basic.html
@@ -335,8 +335,8 @@ body {
 
   {% block body %}
   {% endblock  %}
-<footer class="footer container">
-  
+<footer>
+  <div class="container-fluid footer"></div>
 </footer>
 </body>
 <script> 
