--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -227,11 +227,7 @@ a{
     <div class="col-lg-8 col-md-10 mx-auto">
   
         <article class="blog-post">
-         
-
-         
-        
-     
+  
          
           <div class="container" id='content'>
          
@@ -240,7 +236,7 @@ a{
         </div>
         </article><!-- /.blog-post -->
         
-        </div></div><hr>
+        </div></div></div><hr>
         {%if user.is_authenticated%}
         
         <form action="/blog/postComment" method="post">
