--- a/templates/basic.html
+++ b/templates/basic.html
@@ -343,7 +343,7 @@ body {
       <div class="row">
         <!--Grid column-->
         <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-          <h5 class="text-uppercase">Footer Content</h5>
+          <h5 class="text-uppercase">About us </h5>
   
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis
@@ -402,7 +402,7 @@ body {
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2020 Copyright:
-      <a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+      <a class="text-dark" href="https://writer-hub.herokuapp.com/">Writerhub</a>
     </div>
     <!-- Copyright -->
   </footer>
