--- a/templates/home/contact.html
+++ b/templates/home/contact.html
@@ -52,5 +52,6 @@
 
  <button type="submit" href="#" class="btn btn-primary active" aria-current="page">Submit</button>
 </form>
+</div>
 
 {% endblock body %}
