--- a/templates/home/profile.html
+++ b/templates/home/profile.html
@@ -47,11 +47,11 @@
              {%if profile %}
             
           
-        {% for i in  profile%}
+      
 
-        <img src="https://res.cloudinary.com/dus8g1azl/image/upload/v1/{{i.pic.url}}"  id="logoimg" alt="null">
+        <img src="https://res.cloudinary.com/dus8g1azl/image/upload/v1/{{profile.pic.url}}"  id="logoimg" alt="null">
                   
-        {% endfor %}
+        
     </div>
 
          {% else %}
