--- a/templates/home/profile.html
+++ b/templates/home/profile.html
@@ -44,14 +44,16 @@
         <div class="col-md-3 border-right">
            <div class=" d-flex flex-column align-items-center text-center p-3 py-5">
            
-             {%if profile %}
+             {%if profile  %}
             
-          
-      
+             {% if condition%}
 
-        <img src="{{profile.pic.url}}"  id="logoimg" alt="null">
-                  
-        
+        <img  class="logoimg" src="https://res.cloudinary.com/dus8g1azl/image/upload/v1/{{profile}}"  alt="null">
+            {% else %}
+            <img class="condition" src=""  alt=""  >
+    
+          
+        {% endif %}
     </div>
 
          {% else %}
@@ -117,6 +119,13 @@
   function upload(){
       mainbtn.click()
   }
+  logo=document.querySelector(".condition")
+  absolute_url="{{profile}}"
+  console.log(absolute_url).split("")
+  url=absolute_url.slice(236,url.length);
+ console.log(url)
+  logo.setAttribute("src",url)
+
   </script>
 {% endblock js %}
 </html>
