--- a/templates/basic.html
+++ b/templates/basic.html
@@ -66,23 +66,44 @@ body {
 }
 
 .wrap {
-  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100vw;
   height: 100vh;
-  background-color: black;
+  background-color: rgb(233, 114, 114);
   
 }
+.bubble {
+    width: 50px;
+    height: 50px;
+    background: #fff;
+    margin: 6px;
+    animation: grow 1.3s ease infinite;
+    border-radius: 50%;
+}
+#bubble1{
+  animation-delay:0.2s ;
+}
+#bubble2{
+  animation-delay:0.4s ;
+}
+#bubble3{
+  animation-delay:0.6s ;
+}
+#bubble4{
+  animation-delay:0.8s ;
+}
+@keyframes grow{
 
-.text{
-    position: absolute;
-
-  top: 50%;
-  left: 50%;
- 
-  transform: translate(-50%, -50%);
-  font-size: 3.1rem;
-  font-weight:bolder ;
-  color: #fff;
+  0%{
+    transform: scale(0);
+    }
+    
+  }
+  10%{
+    transform: scale(1);
+  }
 }
 .footer{
   position: relative;
@@ -105,7 +126,10 @@ body {
   <body>
     <div class="wrap">
      
-        <div class="text"> LOADING..</div>
+        <div  class="bubble" id="bubble1"></div>
+        <div class="bubble" id="bubble2"></div>
+        <div class="bubble" id="bubble3"></div>
+        <div class="bubble" id="bubble4"></div>
       
     </div>
 <nav class="navbar navbar-expand-lg navbar-light " style="background-color:#f8f9fa;">
