--- a/templates/basic.html
+++ b/templates/basic.html
@@ -115,6 +115,11 @@ body {
     height: 20vh;
     background: #942b2b;
 }
+.txt{
+  display: block;
+  text-align: center;
+  color: #fff;
+}
        {% block css %} 
   
        {% endblock %}
@@ -130,6 +135,8 @@ body {
         <div class="bubble" id="bubble2"></div>
         <div class="bubble" id="bubble3"></div>
         <div class="bubble" id="bubble4"></div>
+
+        <div class="txt">Please Wait ..</div>
       
     </div>
 <nav class="navbar navbar-expand-lg navbar-light " style="background-color:#f8f9fa;">
