--- a/templates/home/profile.html
+++ b/templates/home/profile.html
@@ -1,131 +1,6 @@
-{%extends "basic.html"%}
 
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
-
-{% block title%}Manage your profile {% endblock %}
-{% block css %}
-.flex{   
-    width: 200px;
-    height: 200px;
-    border: 1px solid red;
-    border-radius: 50%;
-    background: rgb(0 0 0 / 5%);
-    overflow:hidden;
-}
-.logo{
-     width: 100%;
-    height: 100%;
-    background: #fff;
-   
-
-        color: #333;
- 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: bold;
-    text-decoration: up;
-    text-transform: uppercase;
-}
-#logoimg{
-    width:100%;
-    height:100%;
-}
-{% endblock css %}
+{% extends "basic.html" %}
 {% block body %}
-{% load static %}
-  {% load cloudinary %}  
-    <div class="container rounded bg-white  mb-5">
-       
-           
-         
-    <div class="row">
-        <div class="col-md-3 border-right">
-           <div class=" d-flex flex-column align-items-center text-center p-3 py-5">
-           
-             {%if profile  %}
-            
-             {% if condition%}
+  <img src="{{user.profile.pic.url}}" alt="">
 
-        <img  class="logoimg" src="https://res.cloudinary.com/dus8g1azl/image/upload/v1/{{profile}}"  alt="null">
-            {% else %}
-            <img class="condition" src=""  alt=""  >
-    
-          
-        {% endif %}
-    </div>
-
-         {% else %}
-          <div class=" logo"><span id="userlogo">
-          
-          {{request.user.get_short_name|slice:":1"}}</span></div>
-
-
-          
-      
-        </div>
-        </div>
-         
-        {% endif %}
-     
-        
-            <div class="d-flex flex-column align-items-center text-center p-3 py-5"><span class="font-weight-bold">{{request.user.get_short_name}}</span><span class="text-black-50">{{request.user.email}}</span><span> </span></div>
-        </div>
-        <div class="col-md-5 border-right">
-            <div class="p-3 py-5">
-                <div class="d-flex justify-content-between align-items-center mb-3">
-                    <h4 class="text-right">Profile Settings</h4>
-                </div>
-                <div class="row mt-2">
-                    <form action="/profile/" method="POST" enctype="multipart/form-data">
-                        {%csrf_token%}
-                    <input type="file" name="userimg" class="default-btn" >
-                   
-                    <div class="col-md-6"><label class="labels">Name</label><input type="text" class="form-control" placeholder="first name" name='name'
-                         value="{{request.user.get_short_name}}"></div>
-                    <div class="col-md-6"><label class="labels"></label><input type="text" class="form-control"
-                         value="{{request.user.last_name}}" placeholder="surname"></div>
-                </div>
-                <div class="row mt-3">
-                    <div class="col-md-12"><label class="labels ">PhoneNumber</label><input type="text" class="form-control" placeholder="enter phone number" name='tel'
-                        value="{{equest.user.userprofile.tel}}"></div>
-                   
-                    <div class="col-md-12"><label class="labels mt-2 ">Email ID</label><input type="text" class="form-control mt-2" placeholder="enter email id "name="email" value="{{request.user.email}}"></div>
-                    <div class="col-md-12"><label class="labels mt-2">Education</label><input type="text" class="form-control mt-2" name='education' placeholder="education" value=""></div>
-                </div>
-                <div class="row mt-3">
-                    <div class="col-md-6"><label class="labels">Country</label><input type="text" class="form-control mt-2" placeholder="country" name="country"value=""></div>
-                    <div class="col-md-6"><label class="labels ">State/Region</label>
-                        <input type="text" name="state"class="form-control mt-2" value="" placeholder="state"></div>
-                </div>
-                <div class="mt-4 text-center"><button class="btn btn-primary profile-button" type="submit" >Save Profile</button></div>
-            </div>
-       
-        </div>
-    </div>
-</div>
-</div>
-</form>
-</div>
-    
-    
-    {% endblock body %}
-</body>
-{% block js %}
-<script>
-  mainbtn=document.querySelector('.default-btn')
-  custombtn=document.querySelector('.custom-btn')
-  function upload(){
-      mainbtn.click()
-  }
-  logo=document.querySelector(".condition")
-  absolute_url="{{profile}}"
-  console.log(absolute_url).split("")
-  url=absolute_url.slice(236,url.length);
- console.log(url)
-  logo.setAttribute("src",url)
-
-  </script>
-{% endblock js %}
-</html>
+{% endblock body %}
