--- a/templates/basic.html
+++ b/templates/basic.html
@@ -266,7 +266,7 @@ font-weight:600;
             <div class="col">
             
             
-              <a href="{% url 'google_login' %}" class="google btnnn" style="text-decoration: none;"><i class="fa fa-google fa-fw">
+              <a href="{% provider_login_url 'google' %}" class="google btnnn" style="text-decoration: none;"><i class="fa fa-google fa-fw">
                 </i> Login with Google+
               </a>
         <a href="{% url 'social:begin' 'github' %}" class="github btnnn" style="text-decoration: none;"><i class="fa fa-github"></i> Login with GitHub</a>
