--- a/templates/home/profile.html
+++ b/templates/home/profile.html
@@ -1,6 +1,7 @@
 
 {% extends "basic.html" %}
 {% block body %}
-  <img src="{{user.profile.pic.url}}" alt="">
+  <img src="{{request.user.profile.pic.url}}" alt="">
+  <img src="{{ request.user.socialaccount_set.all.0.get_avatar_url }}" alt="not found"/>
 
 {% endblock body %}
