--- a/templates/blog/tag_filter.html
+++ b/templates/blog/tag_filter.html
@@ -33,7 +33,7 @@
               <a href="/blog/tag/{{tag.slug}}" class="mr-1 text-muted">#{{ tag }}</a>
                                                    {% endfor %}
             </div>
-            <div class="card-body" style="background-image: url('https://res.cloudinary.com/dus8g1azl/image/upload/v1/{{post.thumbnail}} ')">
+            <div class="card-body musthead" style="background-image: url('https://res.cloudinary.com/dus8g1azl/image/upload/v1/{{post.thumbnail}} ')">
               <h5 class="card-title">{{post.title}}</h5>
               <p class="card-text">{{post.imtro|truncatechars:70}}</p>
              
