--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -236,7 +236,7 @@ a{
  
         </div>
       {% for tag in post.tags.all %}
-   <a href="/blog/tag/{{tag.slug}}" class="mr-1 text-muted">#{{ tag }}</a>
+   <a href="/blog/tag/{{tag.slug}}" class="mx-1 my-2 btn btn-light btn-sm">#{{ tag }}</a>
                                         {% endfor %}
                                         
                 
