--- a/templates/blog/tag_filter.html
+++ b/templates/blog/tag_filter.html
@@ -4,7 +4,10 @@
     .details{
         height: 70vh;
     }
-    .card-body.musthead {
+    .card{
+        font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif ;
+    }
+    .card.musthead {
    
     background: no-repeat center center;
     background-color: #868e96;
@@ -20,6 +23,11 @@
     width: 100%;
     background-color: #212529;
     opacity: .3;
+}
+.card-header {
+    padding: 8px 0 15px;
+    color: #fff;
+    font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif ;
 }
 </style>
   
@@ -37,29 +45,30 @@
         Common tags :
     </h5>
 {% for common_tags in common_tags %}
-<a href="/blog/tag/{{common_tags.slug}}/" class="mx-1 btn btn-light btn-sm">#{{ common_tags }}</a>
+<a href="/blog/tag/{{common_tags.slug}}/" class="mx-1 my-2 btn btn-light btn-sm">#{{ common_tags }}</a>
 
 {% endfor %}
   
  </div>
       <div class="col-lg-8 col-md-10 mx-auto">
         {% for post in post_to_tag  %}
-        <div class="card text-center my-3">
+        <div class="card text-center .musthead my-3" style="background-image: url('https://res.cloudinary.com/dus8g1azl/image/upload/v1/{{post.thumbnail}} ')">
+            <div class="overlay"></div>
             <div class="card-header">
               Tags :  {% for tag in post.tags.all %}
-              <a href="/blog/tag/{{tag.slug}}" class="mr-1 text-muted">#{{ tag }}</a>
+              <a href="/blog/tag/{{tag.slug}}" class="mx-1 my-2 btn btn-light btn-sm">#{{ tag }}</a>
                                                    {% endfor %}
             </div>
-            <div class="card-body musthead" style="background-image: url('https://res.cloudinary.com/dus8g1azl/image/upload/v1/{{post.thumbnail}} ')">
-                <div class="overlay"></div>
+            <div class="card-body " >
+              
               <h5 class="card-title">{{post.title}}</h5>
               <p class="card-text">{{post.imtro|truncatechars:70}}</p>
              
               <a href="/blog/{{post.slug}}" class="btn btn-primary">Read more</a>
             </div>
-            <div class="card-footer text-muted">
+            <div class="card-footer ">
                 <span class="meta mt-3">Posted by
-                    <a href="#">{{post.writer}}</a>   {{post.pub_date}}
+                    {{post.writer}}  {{post.pub_date}}
             </div>
           </div>
        
