--- a/templates/blog/tag_filter.html
+++ b/templates/blog/tag_filter.html
@@ -7,7 +7,7 @@
     .card{
         font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif ;
     }
-    .musthead {
+    .card.text-center.\.musthead.my-3{
    
     background: no-repeat center center;
     background-color: #868e96;
